5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4326/executions/1602_1016.log
== SUBMITION (2019-03-31 16:14:00) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=float(input("digite um numero para o lado a do triangolo"))
b=float(input("digite um numero para o lado b do triangulo"))
c=float(input("digite um numero para o lado c do triangulo"))
s=(a+b+c)/2
from math import sprt
A=sprt(s*(s-a)*(a-b)-(a-c))
print(round(A,5))
-- EXECUTION TIME:
0.152856
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1016/main.py", line 8, in <module>
    from math import sprt
ImportError: cannot import name 'sprt'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 16:14:33) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=float(input("digite um numero para o lado a do triangolo"))
b=float(input("digite um numero para o lado b do triangulo"))
c=float(input("digite um numero para o lado c do triangulo"))
s=(a+b+c)/2
from math import sqrt
A=sqrt(s*(s-a)*(a-b)-(a-c))
print(round(A,5))
-- EXECUTION TIME:
0.116967
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1016/main.py", line 9, in <module>
    A=sqrt(s*(s-a)*(a-b)-(a-c))
ValueError: math domain error

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 16:14:56) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=float(input("digite um numero para o lado a do triangolo"))
b=float(input("digite um numero para o lado b do triangulo"))
c=float(input("digite um numero para o lado c do triangulo"))
s=(a+b+c)/2
from math import sqrt
A=sqrt(s*(s-a)*(a-b)*-(a-c))
print(round(A,5))
-- EXECUTION TIME:
0.132579
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1016/main.py", line 9, in <module>
    A=sqrt(s*(s-a)*(a-b)*-(a-c))
ValueError: math domain error

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 16:15:41) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=float(input("digite um numero para o lado a do triangolo:"))
b=float(input("digite um numero para o lado b do triangulo:"))
c=float(input("digite um numero para o lado c do triangulo:"))
s=(a+b+c)/2
from math import sqrt
A=sqrt(s*(s-a)*(a-b)*-(a-c))
print(round(A,5))
-- EXECUTION TIME:
0.206907
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1016/main.py", line 9, in <module>
    A=sqrt(s*(s-a)*(a-b)*-(a-c))
ValueError: math domain error

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 16:16:07) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=float(input("digite um numero para o lado a do triangolo:"))
b=float(input("digite um numero para o lado b do triangulo:"))
c=float(input("digite um numero para o lado c do triangulo:"))
s =(a+b+c)/2
from math import sqrt
A =sqrt(s*(s-a)*(a-b)*-(a-c))
print(round(A,5))
-- EXECUTION TIME:
0.149633
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1016/main.py", line 9, in <module>
    A =sqrt(s*(s-a)*(a-b)*-(a-c))
ValueError: math domain error

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 16:16:49) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=float(input("digite um numero para o lado a do triangolo:"))
b=float(input("digite um numero para o lado b do triangulo:"))
c=float(input("digite um numero para o lado c do triangulo:"))
s =(a+b+c)/2
from math import sqrt
A =sqrt(s*(s-a)*(a-b)*-(a-c))
print(round(A,5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    A =sqrt(s*(s-a)*(a-b)*-(a-c))
ValueError: math domain error
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 16:22:20) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=float(input("digite um numero para o lado a do triangolo:"))
b=float(input("digite um numero para o lado b do triangulo:"))
c=float(input("digite um numero para o lado c do triangulo:"))
s =(a+b+c)/2
from math import sqrt*
A =sqrt(s*(s-a)*(a-b)*-(a-c))
print(round(A,5))
-- EXECUTION TIME:
0.184323
-- ERROR:
  File "/home/codebench/codes/1602/1016/main.py", line 8
    from math import sqrt*
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 16:23:16) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=float(input("digite um numero para o lado a do triangolo:"))
b=float(input("digite um numero para o lado b do triangulo:"))
c=float(input("digite um numero para o lado c do triangulo:"))
s =(a+b+c)/2
from math import sqrt*
A =sqrt(s*(s-a)*(s-b)*-(s-c))
print(round(A,5))
-- EXECUTION TIME:
0.191514
-- ERROR:
  File "/home/codebench/codes/1602/1016/main.py", line 8
    from math import sqrt*
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 16:23:32) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=float(input("digite um numero para o lado a do triangolo:"))
b=float(input("digite um numero para o lado b do triangulo:"))
c=float(input("digite um numero para o lado c do triangulo:"))
s =(a+b+c)/2
from math import sqrt*
A =sqrt(s*(s-a)*(s-b)*(s-c))
print(round(A,5))
-- EXECUTION TIME:
0.17621
-- ERROR:
  File "/home/codebench/codes/1602/1016/main.py", line 8
    from math import sqrt*
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 16:23:51) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=float(input("digite um numero para o lado a do triangolo:"))
b=float(input("digite um numero para o lado b do triangulo:"))
c=float(input("digite um numero para o lado c do triangulo:"))
s =(a+b+c)/2
from math import sqrt
A =sqrt(s*(s-a)*(s-b)*(s-c))
print(round(A,5))
-- EXECUTION TIME:
0.133701
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
